--- a/styles/Footer.css
+++ b/styles/Footer.css
@@ -1,26 +1,28 @@
 footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    background-color: #f8f9fa;
-    padding: 0 35%;
-    max-height: 5em;
+  /* position: ;
+  bottom: 0; */
+  margin-top: 250px;
+  width: 100%;
+  background-color: #f8f9fa;
+  padding: 0 35%;
+  max-height: 5em;
 }
 
-.atas,.bawah {
-    text-align: center;
+.atas,
+.bawah {
+  text-align: center;
 }
 
 .atas {
-    border-bottom: solid lightgrey;
-    font-size: 20px;
+  border-bottom: solid lightgrey;
+  font-size: 20px;
 }
 
 .bawah {
-    font-size: 25px;
+  font-size: 25px;
 }
 
 .text {
-    color: lightgrey;
-    max-width: 100%;
+  color: lightgrey;
+  max-width: 100%;
 }
