--- a/styles/Footer.css
+++ b/styles/Footer.css
@@ -1,12 +1,12 @@
-footer {
-  /* position: ;
-  bottom: 0; */
+/* footer {
+  position: ;
+  bottom: 0;
   margin-top: 250px;
   width: 100%;
   background-color: #f8f9fa;
   padding: 0 35%;
   max-height: 5em;
-}
+} */
 
 .atas,
 .bawah {
@@ -14,7 +14,7 @@ footer {
 }
 
 .atas {
-  border-bottom: solid lightgrey;
+  /* border-bottom: solid lightgrey; */
   font-size: 20px;
 }
 
